# ic-siwn

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
.github/workflows/: build.yml  development.yml
scripts/: build.sh  deploy.sh
src/ic_siwn/: Cargo.toml
src/ic_siwn/src/: base64.rs  coding.rs  delegation.rs  hash.rs  init.rs  lib.rs  login.rs  macros.rs  near.rs  nonce.rs  settings.rs  siwn.rs
src/ic_siwn_provider/: Cargo.toml  deploy.sh
src/ic_siwn_provider/src/: init_upgrade.rs  state.rs
src/provider/: Cargo.toml
src/provider/src/: general.rs  init_upgrade.rs  lib.rs  signature_map.rs  siwn_get_delegation.rs  siwn_login.rs  siwn_prepare_login.rs  state.rs
