[package]
name = "ic_siwn"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-certified-map = { workspace = true }

url = { workspace = true }
sha2 = { workspace = true }
rand_chacha = { workspace = true }
base64 = { workspace = true }

near-account-id = { workspace = true }
