[package]
name = "ic_siwn"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
serde_cbor = "0.11"
borsh = "1"
simple_asn1 = "0.6.2"

candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-certified-map = { workspace = true }
ic-stable-structures = { workspace = true }

url = { workspace = true }

sha2 = { workspace = true }
ring = "0.17"
rand_chacha = { workspace = true }

time = { version = "0.3.36", features = ["formatting"] }

near-account-id = { workspace = true }
near-sdk = { workspace = true }

catalyze-shared = { workspace = true }
