[package]
name = "ic_siwn"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
serde_cbor = { workspace = true }
borsh = { workspace = true }
simple_asn1 = { workspace = true }

candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

near-account-id = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-certified-map = { workspace = true }
ic-stable-structures = { workspace = true }

url = { workspace = true }
time = { workspace = true }

sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_chacha = { workspace = true }

catalyze-shared = { workspace = true }
